# agapi

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml  tags.json
.github/workflows/: deploy-docs.yml  deploy_web.yml  tests.yml
agapi/: README.md  __init__.py  cli.py  client.py
agapi/agents/: __init__.py  agent.py  agent_langchain.py  agent_langgraph.py  aliases.py  client.py  config.py  functions.py  schema.py
agapi/images/: POSCAR
agapi/tests/: test_agapi_client.py  test_agent.py  test_agents.pyskip  test_entrypoints.py  test_functions.py  test_functions_long.py  test_functions_long.pyskip
api/: index.html
api/agents/: index.html
api/optimade/: index.html
api/python-client/: index.html
api/rest-endpoints/: index.html
apps/: index.html
apps/apply/: index.html
apps/characterize/: index.html
apps/explore/: index.html
apps/predict/: index.html
apps/validate/: index.html
contributing/: index.html
contributing/app-template/: index.html
contributing/plugin-system/: index.html
contributing/style-guide/: index.html
docs/: index.md
docs/api/: agents.md  index.md  optimade.md  python-client.md  rest-endpoints.md
docs/apps/: index.md
docs/contributing/: app-template.md  index.md  plugin-system.md  style-guide.md
docs/getting-started/: api-overview.md  authentication.md  index.md  quickstart.md
docs/references/: changelog.md  index.md  publications.md
getting-started/: index.html
references/: index.html
search/: search_index.json
stylesheets/: extra.css
tutorials/: index.html
(+119 files in other folders)
